<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_programs">

    <fragment
        android:id="@+id/navigation_programs"
        android:name="com.astadevs.sympathyapp.ui.maps.MapsFragment"
        android:label="@string/title_programs"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_campaigns"
        android:name="com.astadevs.sympathyapp.ui.campaigns.CampaignFragment"
        android:label="@string/title_campaigns"
        tools:layout="@layout/fragment_campaigns" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.astadevs.sympathyapp.ui.chats.ChatsFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.astadevs.sympathyapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>