<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="bottom"
        android:paddingBottom="@dimen/margin_ten"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_dashboard_campaigns"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_dashboard_campaigns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_dashboard_campaigns" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_dashboard_campaigns"
                style="@style/TextViewStyle"
                android:layout_marginTop="@dimen/margin_five"
                android:text="@string/txt_campaigns"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_dashboard_map"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_dashboard_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/black"
                app:srcCompat="@android:drawable/ic_dialog_map" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_dashboard_map"
                style="@style/TextViewStyle"
                android:layout_marginTop="@dimen/margin_five"
                android:text="@string/txt_map"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_dashboard_organizations"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circle_bg"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/splash_logo" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_dashboard_chats"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_dashboard_chats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/black"
                app:srcCompat="@android:drawable/stat_notify_chat" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_dashboard_chats"
                style="@style/TextViewStyle"
                android:layout_marginTop="@dimen/margin_five"
                android:text="@string/txt_chats"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_dashboard_profile"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_dashboard_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_dashboard_profile" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_dashboard_profile"
                style="@style/TextViewStyle"
                android:layout_marginTop="@dimen/margin_five"
                android:text="@string/txt_profile"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>